--- a/05-myFavorites/movies.html
+++ b/05-myFavorites/movies.html
@@ -3,6 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Home</title>
+  <style>
+    body {
+      background-color: aqua;
+    }
+  </style>
 </head>
 <body>
   <h1>Movies</h1>
